production/api-deploy/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-network-policy
spec:
  podSelector:
    matchLabels:
      app: api-v2-ingress
  ingress:
  - ports:
    - port: 90
  policyTypes:
  - Ingress
